--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
   background: rgb(167, 167, 167);
   border-radius: 10px;
 }
+
+.tableRow .row:nth-of-type(even){
+  background-color: rgb(236, 236, 236);
+}
